# crossbeam-power-backpack

./: README.md
usb-bridge/: usb-bridge.kicad_pcb  usb-bridge.kicad_pro  usb-bridge.kicad_sch
usb-bridge-fw/: Cargo.toml
usb-bridge-fw/.cargo/: config.toml
usb-bridge-fw/src/: main.rs
usb-bridge/jlcpcb/: project.db
usb-bridge/jlcpcb/gerber/: usb-bridge-CuBottom.gbr  usb-bridge-CuTop.gbr  usb-bridge-EdgeCuts.gbr  usb-bridge-MaskBottom.gbr  usb-bridge-MaskTop.gbr  usb-bridge-NPTH.drl  usb-bridge-PTH.drl  usb-bridge-PasteBottom.gbr  usb-bridge-PasteTop.gbr  usb-bridge-SilkBottom.gbr  usb-bridge-SilkTop.gbr  usb-bridge-VScore.gbr
usb-bridge/jlcpcb/production_files/: BOM-usb-bridge.csv  CPL-usb-bridge.csv
