[package]
name = "usb-bridge-fw"
version = "0.0.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
rp-pico = "0.9"
usb-device = "0.3"
usbd-serial = "0.2"
panic-halt = "0.2"
heapless = "0.8"
fugit = "*"
ina226 = "0.3.0"

[profile.release]
panic="abort"
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
